# iroh-live

./: .gitignore  BUILD-WINDOWS.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Makefile.toml  OVERNIGHT.md  README.md  REVIEW.md  index.html  nightly-review.md
android-demo/rust/: Cargo.toml
android-demo/rust/src/: lib.rs  logcat.rs
demos/android/rust/: Cargo.toml
demos/android/rust/src/: lib.rs  logcat.rs
demos/headless/: Cargo.toml
demos/headless/src/: main.rs
demos/opengl/: Cargo.toml
demos/opengl/src/: main.rs
demos/pi-zero/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  prepare.sh  rpi-debugging.md  setup-network.sh
demos/pi-zero-minimal/: Cargo.toml  README.md
demos/pi-zero-minimal/src/: main.rs
demos/pi-zero/src/: codec_test.rs  epaper.rs  epd_v4.rs  libcamera.rs  main.rs  publish.rs  watch.rs
docs/: cli.md  (+3 more)
gpu-debug/: Cargo.toml
iroh-live/: Cargo.toml  README.md  build.rs
iroh-live-cli/: Cargo.toml
iroh-live-cli/src/: args.rs  call.rs  devices.rs  import.rs  main.rs  play.rs  publish.rs  record.rs  relay.rs  room.rs  run.rs  source.rs  transport.rs  ui.rs
iroh-live-relay/: Cargo.toml  README.md  build.rs
iroh-live-relay/src/: lib.rs  main.rs  pull.rs
iroh-live-relay/tests/: relay_bridge.rs  relay_room.rs  relay_swap.rs
iroh-live-relay/web/: .gitignore  package-lock.json  package.json  vite.config.ts
iroh-live-relay/web/src/: index.html  index.ts  publish.html  publish.ts
iroh-live/examples/: api_sketch.rs  call.rs  demo.rs  frame_dump.rs  publish.rs  push.rs  readme_publish.rs  readme_subscribe.rs  room-publish-file.rs  rooms.rs  split-patchbay.rs  split.rs  subscribe_test.rs  watch-wgpu.rs  watch.rs
iroh-live/examples/common/: import.rs  mod.rs
iroh-live/src/: audio.rs  av.rs  call.rs  capture.rs  lib.rs  live.rs  node.rs  publish.rs  publisher.rs  relay.rs  rooms.rs  seamless.rs  setup.rs  sources.rs  subscribe.rs  subscription.rs  ticket.rs  types.rs  util.rs  video.rs
iroh-live/src/audio/: decoder.rs  encoder.rs
iroh-live/src/capture/: camera.rs  screen.rs
iroh-live/src/ffmpeg/: mod.rs
iroh-live/src/ffmpeg/audio/: decoder.rs  encoder.rs
iroh-live/src/ffmpeg/video/: decoder.rs  encoder.rs  util.rs
iroh-live/src/native/: mod.rs
iroh-live/src/native/audio/: decoder.rs  encoder.rs  mod.rs
iroh-live/src/native/video/: decoder.rs  encoder.rs  mod.rs
iroh-live/src/rooms/: publisher.rs  relay_session.rs
iroh-live/src/video/: capture.rs  decoder.rs  encoder.rs
iroh-live/tests/: broadcaster.rs  e2e.rs  multi_source.rs  patchbay.rs  room.rs  room_relay.rs  ticket_relays.rs
iroh-moq/: Cargo.toml  README.md
iroh-moq/src/: av.rs  lib.rs  produce.rs  publish.rs  subscribe.rs  ticket.rs
moq-media/: Cargo.toml  README.md  build.rs
moq-media-android/: Cargo.toml  README.md
moq-media-android/src/: camera.rs  egl.rs  handle.rs  lib.rs  renderer.rs
moq-media-dioxus/: Cargo.toml  README.md
moq-media-dioxus/examples/demo/: main.rs  styles.css
moq-media-dioxus/examples/viewer/: main.rs  styles.css
moq-media-dioxus/src/: lib.rs
moq-media-egui/: Cargo.toml  README.md
moq-media-egui/src/: lib.rs  overlay.rs
moq-media-gtk/: Cargo.toml
moq-media-gtk/examples/: gtk-watch.rs
moq-media-gtk/src/: gl_widget.rs  lib.rs
moq-media/examples/: audio-devices.rs  viewer.rs
moq-media/src/: adaptive.rs  audio.rs  audio_backend.rs  audio_file_source.rs  audio_file_symphonia.rs  av.rs  capture.rs  chat.rs  codec.rs  ffmpeg.rs  format.rs  frame_channel.rs  lib.rs  net.rs  nv12_to_rgba.wgsl  pipeline.rs  playout.rs  processing.rs  publish.rs  render.rs  source_spec.rs  stats.rs  subscribe.rs  sync.rs  test_util.rs  traits.rs  transport.rs  util.rs  visualize.rs
moq-media/src/audio/: aec.rs
moq-media/src/audio_backend/: aec.rs
moq-media/src/capture/: camera.rs  screen.rs
moq-media/src/codec/: audio.rs  dynamic.rs  h264.rs  mod.rs  opus.rs  resample.rs  test_util.rs  vaapi.rs  video.rs  vtb.rs
moq-media/src/codec/audio/: decoder.rs  encoder.rs  mod.rs
moq-media/src/codec/av1/: decoder.rs  encoder.rs
moq-media/src/codec/h264/: decoder.rs  encoder.rs
moq-media/src/codec/opus/: decoder.rs  encoder.rs
moq-media/src/codec/tests/: harness.rs  metrics.rs  patterns.rs
moq-media/src/codec/vaapi/: decoder.rs  encoder.rs
moq-media/src/codec/video/: av1_dec.rs  dav1d_dec.rs  decoder.rs  encoder.rs  mod.rs  rav1d_safe.rs  rav1e_enc.rs  test_util.rs  util.rs  vaapi_enc.rs  vtb_enc.rs
moq-media/src/codec/vtb/: encoder.rs
moq-media/src/ffmpeg/: mod.rs
moq-media/src/ffmpeg/audio/: decoder.rs  encoder.rs
moq-media/src/ffmpeg/video/: decoder.rs  encoder.rs  util.rs
moq-media/src/pipeline/: audio_decode.rs  audio_encode.rs  video_decode.rs  video_encode.rs
moq-media/src/processing/: clock.rs  convert.rs  mjpg.rs  scale.rs
moq-media/src/publish/: controller.rs
moq-media/src/render/: dmabuf_import.rs
moq-media/tests/: pipeline_integration.rs  zero_copy_pipeline.rs
rusty-capture/: Cargo.toml  README.md  TODO.md  build.rs
rusty-capture/src/: lib.rs  types.rs
rusty-capture/src/platform/: mod.rs  nokhwa_impl.rs  xcap_impl.rs
rusty-capture/src/platform/android/: mod.rs
rusty-capture/src/platform/apple/: camera.rs  mod.rs  screen.rs
rusty-capture/src/platform/linux/: libcamera.rs  libcamera_h264.rs  mod.rs  pipewire.rs  v4l2.rs  x11.rs
rusty-capture/src/platform/windows/: mod.rs
rusty-capture/tests/: camera.rs  pipewire_reopen.rs
rusty-codecs/: Cargo.toml  README.md  build.rs
rusty-codecs/src/: codec.rs  config.rs  format.rs  lib.rs  libcamera.rs  nv12_to_rgba.wgsl  processing.rs  render.rs  test_sources.rs  traits.rs
rusty-codecs/src/codec/: av1.rs  dynamic.rs  ffmpeg.rs  h264.rs  pcm.rs  test_util.rs  v4l2.rs  vaapi.rs  vtb.rs
rusty-codecs/src/codec/android/: decoder.rs  encoder.rs  format.rs  gpu_frame.rs  hw_decoder.rs  mod.rs
rusty-codecs/src/codec/av1/: decoder.rs  encoder.rs  rav1d_safe.rs
rusty-codecs/src/processing/: convert.rs  resample.rs  scale.rs
rusty-codecs/src/render/: dmabuf_import.rs  gles.rs  gles_dmabuf.rs  metal_import.rs  vpp_retiler.rs
(+220 files in other folders)
