[workspace]
members = [
    "iroh-live",
    "iroh-live-relay",
    "iroh-moq",
    "moq-media",
    "moq-media-android",
    "moq-media-dioxus",
    "moq-media-egui",
    "rusty-capture",
    "rusty-codecs",
    "demos/android/rust",
    "demos/pi-zero",
    "demos/opengl",
    "tools/iroh-live-cli",
]
# moq-media-dioxus is a workspace member but excluded from default builds.
# It pulls ~224 additional deps (blitz-dom, vello, etc.) and is prototype-quality.
# Build it explicitly with: cargo build -p moq-media-dioxus
default-members = [
    "iroh-live",
    "iroh-live-relay",
    "iroh-moq",
    "moq-media",
    "moq-media-android",
    "moq-media-egui",
    "rusty-capture",
    "rusty-codecs",
    "demos/pi-zero",
    "demos/opengl",
    "tools/iroh-live-cli",
]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
# External
iroh = "0.97.0"
iroh-gossip = "0.97.0"
iroh-tickets = "0.4.0"
iroh-smol-kv = { git = "https://github.com/n0-computer/iroh-smol-kv.git", branch = "iroh-097", default-features = false }
hang = { git = "https://github.com/Frando/moq.git", branch = "dev" }
moq-lite = { git = "https://github.com/Frando/moq.git", branch = "dev" }
moq-mux = { git = "https://github.com/Frando/moq.git", branch = "dev" }
moq-relay = { git = "https://github.com/Frando/moq.git", branch = "dev", default-features = false }
moq-native = { git = "https://github.com/Frando/moq.git", branch = "dev", default-features = false }
web-transport-iroh = { git = "https://github.com/n0-computer/web-transport-iroh.git", branch = "main" }

# In-repo crates
iroh-live = { path = "iroh-live", default-features = false }
iroh-moq = { path = "iroh-moq" }
moq-media = { path = "moq-media", default-features = false }
moq-media-android = { path = "moq-media-android" }
moq-media-egui = { path = "moq-media-egui" }
rusty-codecs = { path = "rusty-codecs", default-features = false }
rusty-capture = { path = "rusty-capture", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ["cfg(docsrs)", "cfg(any_audio_codec)", "cfg(any_video_codec)", "cfg(any_codec)"] }
elided_lifetimes_in_paths = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
or_fun_call = "warn"
use_self = "warn"
unused_async = "warn"
absolute_paths = "allow"
manual_let_else = "warn"
allow_attributes_without_reason = "warn"
mod_module_files = "deny"
