[workspace]
members = [
    "iroh-live",
    "iroh-live-relay",
    "iroh-moq",
    "moq-media",
    "moq-media-android",
    "moq-media-dioxus",
    "moq-media-egui",
    "rusty-capture",
    "rusty-codecs",
    "demos/android/rust",
    "demos/pi-zero",
    "demos/headless",
    "demos/opengl",
    "iroh-live-cli",
]
# moq-media-dioxus is a workspace member but excluded from default builds.
# It pulls ~224 additional deps (blitz-dom, vello, etc.) and is prototype-quality.
# Build it explicitly with: cargo build -p moq-media-dioxus
default-members = [
    "iroh-live",
    "iroh-live-relay",
    "iroh-moq",
    "moq-media",
    "moq-media-android",
    "moq-media-egui",
    "rusty-capture",
    "rusty-codecs",
    "demos/headless",
    "demos/pi-zero",
    "demos/opengl",
    "iroh-live-cli",
]
resolver = "2"

[profile.release]
debug = true

[profile.release-dist]
inherits = "release"
debug = false
strip = true
lto = "thin"

[workspace.dependencies]
# External
iroh = { version = "0.97.0", default-features = false, features = ["metrics", "portmapper", "fast-apple-datapath", "tls-aws-lc-rs"] }
iroh-gossip = "0.97.0"
iroh-tickets = "0.4.0"
iroh-smol-kv = { git = "https://github.com/n0-computer/iroh-smol-kv", branch = "iroh-097", default-features = false }
hang = { git = "https://github.com/Frando/moq", branch = "deps/iroh-main" }
moq-lite = { git = "https://github.com/Frando/moq", branch = "deps/iroh-main" }
moq-mux = { git = "https://github.com/Frando/moq", branch = "deps/iroh-main" }
moq-relay = { git = "https://github.com/Frando/moq", branch = "deps/iroh-main", default-features = false }
moq-native = { git = "https://github.com/Frando/moq", branch = "deps/iroh-main", default-features = false }
web-transport-iroh = { version = "0.2" }

# In-repo crates
iroh-live = { path = "iroh-live", default-features = false }
iroh-live-relay = { path = "iroh-live-relay" }
iroh-moq = { path = "iroh-moq" }
moq-media = { path = "moq-media", default-features = false }
moq-media-android = { path = "moq-media-android" }
moq-media-egui = { path = "moq-media-egui" }
rusty-codecs = { path = "rusty-codecs", default-features = false }
rusty-capture = { path = "rusty-capture", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ["cfg(docsrs)", "cfg(any_audio_codec)", "cfg(any_video_codec)", "cfg(any_codec)"] }
elided_lifetimes_in_paths = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
or_fun_call = "warn"
use_self = "warn"
unused_async = "warn"
absolute_paths = "allow"
manual_let_else = "warn"
allow_attributes_without_reason = "warn"
mod_module_files = "deny"

[patch.crates-io]
noq = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-proto = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-udp = { git = "https://github.com/n0-computer/noq", branch = "main" }

iroh = { git = "https://github.com/n0-computer/iroh", branch = "main" }
iroh-base = { git = "https://github.com/n0-computer/iroh", branch = "main" }
iroh-relay = { git = "https://github.com/n0-computer/iroh", branch = "main" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip", branch = "deps/iroh-main" }

web-transport-iroh = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
web-transport-noq = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
web-transport-proto = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
web-transport-trait = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
