[package]
name = "gpu-debug"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
ash = { version = "0.38", default-features = false }
cros-codecs = { version = "0.0.6", features = ["vaapi"] }
drm-fourcc = "2.2"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu"] }
egui-wgpu = "0.33"
gbm = "0.18"
libc = "0.2"
openh264 = { version = "0.9", features = ["source"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = { version = "27", default-features = false, features = ["wgsl", "vulkan"] }
