[package]
name = "iroh-live-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for iroh-live: publish, play, call, and room"
publish = false

[[bin]]
name = "irl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2.9.0"
hang = { workspace = true }
dirs = "6.0.0"
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "wgpu"] }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
iroh-live = { workspace = true }
iroh-live-relay = { path = "../iroh-live-relay" }
moq-lite = { workspace = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
moq-media = { workspace = true }
moq-media-egui = { workspace = true, optional = true }
moq-mux = { workspace = true }
n0-error = { version = "0.1.2", features = ["anyhow"] }
qr2term = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.9"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["wayland", "x11"] }

[features]
default = [
    "h264", "opus", "pcm", "capture", "wgpu",
    "vaapi", "videotoolbox", "dmabuf-import", "metal-import", "capture-all"
]
qlog = ["iroh/qlog"]

# Codecs — delegate to moq-media
h264 = ["moq-media/h264"]
opus = ["moq-media/opus"]
pcm = ["moq-media/pcm"]
av1 = ["moq-media/av1"]

# Hardware acceleration
vaapi = ["moq-media/vaapi"]
videotoolbox = ["moq-media/videotoolbox"]
dmabuf-import = ["wgpu", "moq-media/dmabuf-import"]
metal-import = ["wgpu", "moq-media/metal-import"]
v4l2 = ["moq-media/v4l2"]
jack = ["moq-media/jack"]

# Capture
capture = ["moq-media/capture"]
capture-all = ["moq-media/capture-all"]

# Rendering
wgpu = ["moq-media/wgpu", "dep:moq-media-egui"]

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
