[package]
name = "iroh-live-relay"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iroh-live-relay"
path = "src/main.rs"

[dependencies]
moq-relay = { workspace = true, default-features = false, features = ["noq", "iroh"] }
moq-native = { workspace = true, default-features = false, features = ["noq", "iroh", "aws-lc-rs"] }
moq-lite = { workspace = true }
axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
include_dir = "0.7"
dirs = "6"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"

[dev-dependencies]
iroh = { workspace = true }
iroh-live = { path = "../iroh-live" }
moq-media = { path = "../moq-media", features = ["test-util"] }
rand = "0.9"
serial_test = "3"
url = "2"

[lints]
workspace = true
