[package]
name = "iroh-live"
version = "0.1.0"
edition = "2024"
description = "audio and video live streaming over iroh"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
byte-unit = { version = "5.1", features = ["bit"] }
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["display", "debug", "eq"] }
hang = "0.15"
image = { version = "0.25", default-features = false }
iroh = "0.96.1"
iroh-gossip = "0.96.0"
iroh-moq = { path = "../iroh-moq" }
iroh-tickets = "0.3.0"
moq-lite = "0.15"
moq-media = { version = "0.1.0", path = "../moq-media" }
n0-error = { version = "0.1.2", features = ["anyhow"] }
n0-future = "0.3.1"
n0-watcher = "0.6.0"
postcard = "1.1.3"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.48.0", features = ["sync"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
bytes = "1.11.0"
iroh-smol-kv = { git = "https://github.com/Frando/iroh-smol-kv", branch = "iroh-096", default-features = false }


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "wayland", "x11", "wgpu"] }
egui-wgpu = "0.33.0"
moq-media-egui = { path = "../moq-media-egui" }
wgpu = "27"
winit = "0.30"
pollster = "0.4"
moq-mux = "0.3.1"
postcard = "1.1.3"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.20"

[lints]
workspace = true

[features]
default = ["av1"]
av1 = ["moq-media/av1"]
videotoolbox = ["moq-media/videotoolbox"]
vaapi = ["moq-media/vaapi"]
wgpu = ["moq-media/wgpu"]
dmabuf-import = ["wgpu", "moq-media/dmabuf-import", "moq-media-egui/dmabuf-import"]
