[package]
name = "moq-media-dioxus"
version = "0.1.0"
edition = "2024"
description = "dioxus-native integration for moq-media video rendering"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyrender_vello = "0.7"
dioxus-native = { git = "https://github.com/DioxusLabs/blitz", features = ["vello", "system-fonts", "prelude"] }
moq-media = { workspace = true, features = ["wgpu"] }
tracing = "0.1"
wgpu = { version = "27", default-features = false }
wgpu_context = "0.3"

[dev-dependencies]
moq-media = { workspace = true, features = ["h264", "av1", "capture"] }
strum = { version = "0.28", features = ["derive"] }
tokio-util = "0.7"
tracing-subscriber = "0.3"

[features]
default = []
dmabuf-import = ["moq-media/dmabuf-import"]
capture-camera = ["moq-media/capture-camera"]
capture-screen = ["moq-media/capture-screen"]

[[example]]
name = "demo"
path = "examples/demo/main.rs"
