[package]
name = "moq-media-egui"
version = "0.1.0"
edition = "2024"
description = "egui integration for moq-media video rendering"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1"
egui = "0.33"
egui-wgpu = { version = "0.33.0", optional = true }
epaint = "0.33"
moq-media = { workspace = true }
pollster = { version = "0.4", optional = true }
tracing = "0.1.41"
wgpu = { version = "27", default-features = false, features = ["wgsl", "vulkan"], optional = true }

[dev-dependencies]

[features]
default = ["wgpu-render"]
wgpu-render = ["dep:egui-wgpu", "dep:wgpu", "dep:pollster", "moq-media/wgpu"]
dmabuf-import = ["moq-media/dmabuf-import", "wgpu-render"]
