[package]
name = "moq-media"
version = "0.1.0"
edition = "2024"
description = "native audio and video capturing, playback, encoding, decoding"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
byte-unit = { version = "5.1", features = ["bit"] }
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["display", "debug", "eq", "deref"] }
firewheel = { version = "0.10.0", features = ["cpal", "peak_meter_node", "std", "stream_nodes", "cpal_resample_inputs"] }
hang = "0.15"
image = { version = "0.25", default-features = false }
moq-lite = "0.15"
n0-error = { version = "0.1.2", features = ["anyhow"] }
n0-future = "0.3.1"
n0-watcher = "0.6.0"
postcard = "1.1.3"
rand = "0.9"
rusty-codecs = { path = "../rusty-codecs", features = ["hang"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.48.0", features = ["sync"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
rusty-capture = { path = "../rusty-capture", optional = true, default-features = false, features = ["pipewire", "v4l2", "x11", "apple", "apple-screen"] }
sonora = { version = "0.1" }
bytes = "1.11.0"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.6", optional = true, features = ["vaapi"] }

[target.'cfg(target_os = "macos")'.dependencies]

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33.0", features = ["wgpu"] }
egui-wgpu = "0.33.0"
moq-media-egui = { path = "../moq-media-egui" }
pollster = "0.4"
image = { version = "0.25", features = ["jpeg"] }
postcard = "1.1.3"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.20"

[features]
default = ["h264", "opus", "av1", "capture"]
h264 = ["rusty-codecs/h264"]
opus = ["rusty-codecs/opus"]
av1 = ["rusty-codecs/av1"]
capture = ["capture-camera", "capture-screen"]
capture-camera = ["dep:rusty-capture"]
capture-screen = ["dep:rusty-capture"]
videotoolbox = ["rusty-codecs/videotoolbox"]
vaapi = ["rusty-codecs/vaapi", "dep:cros-codecs"]
wgpu = ["rusty-codecs/wgpu"]
dmabuf-import = ["wgpu", "rusty-codecs/dmabuf-import"]
