[package]
name = "moq-media"
version = "0.1.0"
edition = "2024"
description = "native audio and video capturing, playback, encoding, decoding"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
byte-unit = { version = "5.1", features = ["bit"] }
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["display", "debug", "eq", "deref"] }
cpal = { git = "https://github.com/RustAudio/cpal.git", branch = "master" }
fixed-resample = { version = "0.9", features = ["resampler"] }
arc-swap = "1.7"
ringbuf = "0.4"
hang = { workspace = true }
image = { version = "0.25", default-features = false }
moq-lite = { workspace = true }
n0-error = { version = "0.1.2", features = ["anyhow"] }
n0-future = "0.3.1"
n0-watcher = "0.6.0"
postcard = "1.1.3"
rand = "0.9"
rusty-codecs = { workspace = true, features = ["hang"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.48.0", features = ["sync"] }
tokio-util = "0.7.17"
throttled-tracing = "0.1.0"
tracing = "0.1.41"
rusty-capture = { workspace = true, optional = true }
sonora = { version = "0.1" }
bytes = "1.11.0"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.6", optional = true, features = ["vaapi"] }

[target.'cfg(target_os = "macos")'.dependencies]

[dev-dependencies]
buf-list = "1.1"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "wgpu"] }
egui-wgpu = "0.33.0"
moq-media-egui = { workspace = true }
pollster = "0.4"
image = { version = "0.25", features = ["jpeg"] }
postcard = "1.1.3"
rusty-capture = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.20"
wgpu = { version = "27", default-features = false, features = ["wgsl", "vulkan"] }

# Enable test-util in rusty-codecs for unit tests that use codec::test_util.
rusty-codecs = { workspace = true, features = ["test-util"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["wayland", "x11"] }

[features]
default = ["h264", "opus", "capture"]
test-util = ["rusty-codecs/test-util"]
h264 = ["rusty-codecs/h264"]
opus = ["rusty-codecs/opus"]
av1 = ["rusty-codecs/av1"]
capture = ["capture-camera", "capture-screen", "pipewire"]
capture-camera = ["dep:rusty-capture", "rusty-capture/v4l2", "rusty-capture/camera-apple"]
capture-screen = ["dep:rusty-capture", "rusty-capture/screen-apple"]
pipewire = ["dep:rusty-capture", "rusty-capture/pipewire"]
videotoolbox = ["rusty-codecs/videotoolbox"]
vaapi = ["rusty-codecs/vaapi", "dep:cros-codecs"]
v4l2 = ["rusty-codecs/v4l2"]
wgpu = ["rusty-codecs/wgpu"]
dmabuf-import = ["wgpu", "rusty-codecs/dmabuf-import"]
metal-import = ["wgpu", "rusty-codecs/metal-import"]
gles = ["rusty-codecs/gles"]
gles-dmabuf = ["gles", "rusty-codecs/gles-dmabuf"]
android = ["rusty-codecs/android"]
