[package]
name = "moq-media"
version = "0.1.0"
edition = "2024"
description = "native audio and video capturing, playback, encoding, decoding"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
derive_more = { version = "2.0.1", features = ["display", "debug", "eq", "deref"] }
cpal = { git = "https://github.com/RustAudio/cpal.git", branch = "master" }
fixed-resample = { version = "0.9", features = ["resampler"] }
ringbuf = "0.4"
hang = { workspace = true }
image = { version = "0.25", default-features = false }
moq-lite = { workspace = true }
n0-error = { version = "0.1.2", features = ["anyhow"] }
n0-future = "0.3.1"
n0-watcher = "0.6.0"
rusty-codecs = { workspace = true, features = ["hang"] }
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.48.0", features = ["sync"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
rusty-capture = { workspace = true, optional = true }
sonora = { version = "0.1" }
bytes = "1.11.0"
throttled-tracing = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.6", optional = true, features = ["vaapi"] }

[target.'cfg(target_os = "macos")'.dependencies]

[dev-dependencies]
buf-list = "1.1"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "wgpu"] }
egui-wgpu = "0.33.0"
moq-media-egui = { workspace = true }
pollster = "0.4"
image = { version = "0.25", features = ["jpeg"] }
postcard = "1.1.3"
rusty-capture = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.20"
wgpu = { version = "27", default-features = false, features = ["wgsl", "vulkan"] }

# Enable test-util in rusty-codecs for unit tests that use codec::test_util.
rusty-codecs = { workspace = true, features = ["test-util"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["wayland", "x11"] }

[features]
default = ["h264", "opus", "capture"]
android = ["rusty-codecs/android"]
av1 = ["rusty-codecs/av1"]

capture = ["capture-camera", "capture-screen", "pipewire"]
capture-camera = ["dep:rusty-capture", "rusty-capture/v4l2", "rusty-capture/camera-apple"]
capture-screen = ["dep:rusty-capture", "rusty-capture/screen-apple"]
capture-all = ["dep:rusty-capture", "rusty-capture/all"]

dmabuf-import = ["wgpu", "rusty-codecs/dmabuf-import"]
gles = ["rusty-codecs/gles"]
gles-dmabuf = ["gles", "rusty-codecs/gles-dmabuf"]
h264 = ["rusty-codecs/h264"]
metal-import = ["wgpu", "rusty-codecs/metal-import"]
opus = ["rusty-codecs/opus"]
pipewire = ["dep:rusty-capture", "rusty-capture/pipewire"]
nokhwa = ["dep:rusty-capture", "rusty-capture/nokhwa"]
xcap = ["dep:rusty-capture", "rusty-capture/xcap"]
test-util = ["rusty-codecs/test-util"]
v4l2 = ["rusty-codecs/v4l2"]
vaapi = ["rusty-codecs/vaapi", "dep:cros-codecs"]
videotoolbox = ["rusty-codecs/videotoolbox"]
wgpu = ["rusty-codecs/wgpu"]
