[package]
name = "rusty-capture"
version = "0.1.0"
edition = "2024"
description = "Cross-platform screen and camera capture with zero-copy GPU buffer support"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
derive_more = { version = "2.0.1", features = ["display", "debug"] }
tracing = "0.1.41"

image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Cross-platform screen capture (Linux X11/Wayland, macOS, Windows).
xcap = { version = "0.9", optional = true }
# Cross-platform webcam capture (Linux V4L2, macOS AVFoundation, Windows Media Foundation).
nokhwa = { version = "0.10", optional = true, features = ["input-native", "camera-sync-impl"] }

# Core types from rusty-codecs (no codec features enabled).
rusty-codecs = { workspace = true }

# Linux: PipeWire (screen + camera, DMA-BUF zero-copy)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
pipewire = { version = "0.9", optional = true }
libspa = { version = "0.9", optional = true }
ashpd = { version = "0.11", optional = true, default-features = false, features = ["tokio"] }
nix = { version = "0.30", optional = true, default-features = false, features = ["ioctl", "fs", "mman"] }
tokio = { version = "1", optional = true, features = ["rt"] }
v4l2r = { version = "0.0.7", optional = true }
x11rb = { version = "0.13", optional = true, features = ["shm", "randr"] }

# macOS/iOS: ScreenCaptureKit (screen) + AVFoundation (camera)
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-av-foundation = { version = "0.3", optional = true, features = [
    "AVCaptureDevice",
    "AVCaptureInput",
    "AVCaptureOutput",
    "AVCaptureSession",
    "AVMediaFormat",
] }
objc2-core-media = { version = "0.3", optional = true, features = [
    "CMSampleBuffer",
    "CMTime",
    "CMFormatDescription",
] }
objc2-core-video = { version = "0.3", optional = true, features = [
    "CVPixelBuffer",
    "CVBuffer",
    "CVReturn",
    "CVImageBuffer",
    "CVBase",
] }
block2 = { version = "0.6", optional = true }
dispatch2 = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", optional = true }

[features]
default = ["camera", "screen", "xcap", "nokhwa"]

# Capability features — what consumers should use.
camera = ["camera-linux", "camera-apple"]
screen = ["screen-linux", "screen-apple"]

# Platform bundles — select the right backends per OS.
# Activating e.g. camera-linux on macOS is harmless: the deps are
# declared under [target.'cfg(target_os = "linux")'.dependencies]
# so Cargo ignores them on other platforms.
camera-linux = ["pipewire", "v4l2"]
camera-apple = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-av-foundation", "dep:objc2-core-media", "dep:objc2-core-video", "dep:block2", "dep:dispatch2"]
screen-linux = ["pipewire"]
screen-apple = ["camera-apple", "dep:screencapturekit"]

# Low-level backend features — for fine-grained / embedded builds.
pipewire = ["dep:pipewire", "dep:libspa", "dep:ashpd", "dep:nix", "dep:tokio"]
v4l2 = ["dep:v4l2r", "dep:nix"]
x11 = ["dep:x11rb"]
xcap = ["dep:xcap"]
nokhwa = ["dep:nokhwa"]
