[package]
name = "rusty-codecs"
version = "0.1.0"
edition = "2024"
description = "Audio and video codec implementations: encoding, decoding, and format conversion"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
buf-list = "1.1"
bytes = "1.11.0"
derive_more = { version = "2.0.1", features = ["display", "debug", "eq", "deref"] }
hang = { workspace = true, optional = true }
image = { version = "0.25", default-features = false }
n0-future = "0.3.1"
pic-scale = "0.6"
strum = { version = "0.28", features = ["derive"] }
throttled-tracing = "0.1.0"
tracing = "0.1.41"
yuv = "0.8.12"
libc = "0.2"

openh264 = { version = "0.9", optional = true, features = ["source"] }
unsafe-libopus = { version = "0.2", optional = true }
rubato = { version = "1.0", optional = true }
audioadapter-buffers = { version = "2.0", optional = true }
rav1e = { version = "0.8", optional = true }
rav1d = { git = "https://github.com/memorysafety/rav1d", default-features = false, features = ["bitdepth_8", "bitdepth_16", "asm"], optional = true }
glow = { version = "0.16", optional = true }
wgpu = { version = "27", optional = true, default-features = false, features = ["wgsl"] }
wgpu-hal = { version = "27", optional = true, default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.6", optional = true }
ash = { version = "0.38", optional = true, default-features = false }
v4l2r = { version = "0.0.7", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9", optional = true, features = ["media", "api-level-26"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-video-toolbox = { version = "0.3", optional = true, features = ["VTCompressionSession", "VTDecompressionSession", "VTErrors"] }
objc2-core-media = { version = "0.3", optional = true, features = ["CMTime", "CMSampleBuffer", "CMFormatDescription", "CMBlockBuffer"] }
objc2-core-video = { version = "0.3", optional = true, features = ["CVPixelBuffer", "CVBuffer", "CVPixelBufferPool", "CVReturn", "CVImageBuffer", "CVBase"] }
objc2-core-foundation = { version = "0.3", optional = true, features = ["CFDictionary"] }
objc2-metal = { version = "0.3", optional = true, features = ["MTLDevice", "MTLTexture", "MTLPixelFormat"] }
objc2 = { version = "0.6", optional = true }
metal = { version = "0.32", optional = true }

[dev-dependencies]
image = { version = "0.25", features = ["jpeg"] }
rand = "0.9"

[features]
default = ["h264", "opus"]
hang = ["dep:hang"]
h264 = ["dep:openh264"]
opus = ["dep:unsafe-libopus", "dep:rubato", "dep:audioadapter-buffers"]
pcm = ["dep:rubato", "dep:audioadapter-buffers"]
av1 = ["dep:rav1e", "dep:rav1d"]
apple-gpu = ["dep:objc2-core-video", "dep:objc2-core-foundation", "dep:objc2"]
videotoolbox = ["apple-gpu", "dep:objc2-video-toolbox", "dep:objc2-core-media"]
vaapi = ["dep:cros-codecs", "cros-codecs/vaapi"]
v4l2 = ["dep:v4l2r"]
wgpu = ["dep:wgpu"]
metal-import = ["wgpu", "apple-gpu", "dep:metal", "dep:wgpu-hal", "dep:objc2-metal", "wgpu/metal", "wgpu-hal/metal", "objc2-core-video/CVMetalTexture", "objc2-core-video/CVMetalTextureCache", "objc2-core-video/objc2-metal"]
media-foundation = []
android = ["dep:ndk"]
gles = ["dep:glow"]
gles-dmabuf = ["gles"]
dmabuf-import = ["wgpu", "dep:ash", "wgpu/vulkan"]
raspberry-pi = ["h264"]
test-util = []
